--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.project
+.settings/
+ui/.settings
+.vscode/settings.json
+.vscode/tasks.json
