--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "mainClass": "net.gat3way.achilles.ui/net.gat3way.achilles.ui.Launcher",
             "vmArgs": "--module-path /home/luis/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml",
             "cwd": "${workspaceFolder}/ui",
-            "console": "internalConsole"
+            "console": "internalConsole",
+            "projectName": "ui"
         }
     ]
 }
