--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <artifactId>achilles</artifactId>
 
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>achilles</name>
 
