--- a/crypt/pom.xml
+++ b/crypt/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>achilles</artifactId>
         <groupId>net.gat3way</groupId>
-        <version>2.3-SNAPSHOT</version>
+        <version>2.3</version>
     </parent>
 
     <groupId>net.gat3way.achilles</groupId>
     <artifactId>crypt</artifactId>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3</version>
     <name>crypt</name>
     <packaging>jar</packaging>
 
